; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_array.c_spl_array_it_get_current_data.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_array.c_spl_array_it_get_current_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i32 }

@SPL_ARRAY_OVERLOADED_CURRENT = common dso_local global i32 0, align 4
@IS_INDIRECT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_8__*)* @spl_array_it_get_current_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @spl_array_it_get_current_data(%struct.TYPE_8__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %9 = call %struct.TYPE_9__* @Z_SPLARRAY_P(i32* %8)
  store %struct.TYPE_9__* %9, %struct.TYPE_9__** %4, align 8
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %11 = call i32* @spl_array_get_hash_table(%struct.TYPE_9__* %10)
  store i32* %11, i32** %5, align 8
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @SPL_ARRAY_OVERLOADED_CURRENT, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %1
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %20 = call i32* @zend_user_it_get_current_data(%struct.TYPE_8__* %19)
  store i32* %20, i32** %2, align 8
  br label %39

21:                                               ; preds = %1
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %25 = call i32 @spl_array_get_pos_ptr(i32* %23, %struct.TYPE_9__* %24)
  %26 = call i32* @zend_hash_get_current_data_ex(i32* %22, i32 %25)
  store i32* %26, i32** %6, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %37

29:                                               ; preds = %21
  %30 = load i32*, i32** %6, align 8
  %31 = call i64 @Z_TYPE_P(i32* %30)
  %32 = load i64, i64* @IS_INDIRECT, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %37

34:                                               ; preds = %29
  %35 = load i32*, i32** %6, align 8
  %36 = call i32* @Z_INDIRECT_P(i32* %35)
  store i32* %36, i32** %6, align 8
  br label %37

37:                                               ; preds = %34, %29, %21
  %38 = load i32*, i32** %6, align 8
  store i32* %38, i32** %2, align 8
  br label %39

39:                                               ; preds = %37, %18
  %40 = load i32*, i32** %2, align 8
  ret i32* %40
}

declare dso_local %struct.TYPE_9__* @Z_SPLARRAY_P(i32*) #1

declare dso_local i32* @spl_array_get_hash_table(%struct.TYPE_9__*) #1

declare dso_local i32* @zend_user_it_get_current_data(%struct.TYPE_8__*) #1

declare dso_local i32* @zend_hash_get_current_data_ex(i32*, i32) #1

declare dso_local i32 @spl_array_get_pos_ptr(i32*, %struct.TYPE_9__*) #1

declare dso_local i64 @Z_TYPE_P(i32*) #1

declare dso_local i32* @Z_INDIRECT_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
